; ModuleID = '/home/carl/AnghaBench/i3/src/extr_key_press.c_handle_key_press.c'
source_filename = "/home/carl/AnghaBench/i3/src/extr_key_press.c_handle_key_press.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i32, i32, i32 }

@XCB_KEY_RELEASE = common dso_local global i64 0, align 8
@last_timestamp = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [25 x i8] c"%s %d, state raw = 0x%x\0A\00", align 1
@.str.1 = private unnamed_addr constant [11 x i8] c"KeyRelease\00", align 1
@.str.2 = private unnamed_addr constant [9 x i8] c"KeyPress\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @handle_key_press(%struct.TYPE_3__* %0) #0 {
  %2 = alloca %struct.TYPE_3__*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %2, align 8
  %6 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %7 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %6, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = load i64, i64* @XCB_KEY_RELEASE, align 8
  %10 = icmp eq i64 %8, %9
  %11 = zext i1 %10 to i32
  store i32 %11, i32* %3, align 4
  %12 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %13 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %12, i32 0, i32 3
  %14 = load i32, i32* %13, align 8
  store i32 %14, i32* @last_timestamp, align 4
  %15 = load i32, i32* %3, align 4
  %16 = icmp ne i32 %15, 0
  %17 = zext i1 %16 to i64
  %18 = select i1 %16, i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.1, i64 0, i64 0), i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.2, i64 0, i64 0)
  %19 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %20 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %19, i32 0, i32 2
  %21 = load i32, i32* %20, align 4
  %22 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %23 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %22, i32 0, i32 1
  %24 = load i32, i32* %23, align 8
  %25 = call i32 @DLOG(i8* getelementptr inbounds ([25 x i8], [25 x i8]* @.str, i64 0, i64 0), i8* %18, i32 %21, i32 %24)
  %26 = load %struct.TYPE_3__*, %struct.TYPE_3__** %2, align 8
  %27 = bitcast %struct.TYPE_3__* %26 to i32*
  %28 = call i32* @get_binding_from_xcb_event(i32* %27)
  store i32* %28, i32** %4, align 8
  %29 = load i32*, i32** %4, align 8
  %30 = icmp eq i32* %29, null
  br i1 %30, label %31, label %32

31:                                               ; preds = %1
  br label %37

32:                                               ; preds = %1
  %33 = load i32*, i32** %4, align 8
  %34 = call i32* @run_binding(i32* %33, i32* null)
  store i32* %34, i32** %5, align 8
  %35 = load i32*, i32** %5, align 8
  %36 = call i32 @command_result_free(i32* %35)
  br label %37

37:                                               ; preds = %32, %31
  ret void
}

declare dso_local i32 @DLOG(i8*, i8*, i32, i32) #1

declare dso_local i32* @get_binding_from_xcb_event(i32*) #1

declare dso_local i32* @run_binding(i32*, i32*) #1

declare dso_local i32 @command_result_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
